# platform_passer

./: .gitignore  Cargo.toml  PRDs.md  README.md  cleanup_certs.ps1  guid_todo_list.md  sign_build.ps1  sign_desktop.ps1
apps/cli/: Cargo.toml  app.manifest  build.rs
apps/cli/src/: main.rs
apps/desktop/src/: index.html  style.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  build_output.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
crates/clipboard/: Cargo.toml  check_output.json
crates/clipboard/src/: lib.rs  macos.rs  traits.rs
crates/clipboard/src/windows/: impl_win.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  frame.rs  io.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: keymap.rs  lib.rs  traits.rs
crates/input/src/macos/: mod.rs  permissions.rs  sink.rs  source.rs  utils.rs
crates/input/src/windows/: mod.rs  sink.rs  source.rs
crates/session/: Cargo.toml
crates/session/src/: client.rs  clipboard_utils.rs  commands.rs  events.rs  lib.rs  logging.rs  server.rs
crates/transport/: Cargo.toml
crates/transport/src/: cert.rs  client.rs  lib.rs  server.rs
docs/handover/: macos_sync_disconnect.md
docs/macos/: README.md  dev_log.md  fix_windows_client_double_click.md  optimized.dart  plan_phase2_ux.md  protocol_plan.md  todo_list.md  windows_fix_report.md
docs/windows/: dev_log.md  file_todolist.md  fix_list.md  fix_server_copy_to_client.md  fix_windows_client_double_click.md  gui_states_and_autostart.md  reconnection_and_styles.md
