[package]
name = "platform-passer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-passer-core = { path = "../../crates/core" }
platform-passer-session = { path = "../../crates/session" }
platform-passer-transport = { path = "../../crates/transport" }
platform-passer-input = { path = "../../crates/input" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
