[package]
name = "platform-passer-clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
platform-passer-core = { path = "../core" }
arboard = "3.2"
image = "0.24"

# Keep platform dependencies for advanced features if arboard fails, 
# but arboard should handle standard text/image.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
libc = "0.2"
