[package]
name = "platform-passer-input"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-passer-core = { path = "../core" }
anyhow = "1.0"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_Foundation", 
    "Win32_UI_WindowsAndMessaging"
] }
