[package]
name = "platform-passer-input"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-passer-core = { path = "../core" }
anyhow = "1.0"
log = "0.4"
tracing = "0.1.44"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_Foundation", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
libc = "0.2"
objc = "0.2"
foreign-types = "0.5"
