[package]
name = "platform-passer-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
platform-passer-core = { path = "../core" }
platform-passer-transport = { path = "../transport" }
platform-passer-input = { path = "../input" }
platform-passer-clipboard = { path = "../clipboard" }
quinn = "0.10" # Ensure version match or use wildcards if acceptable for dev
