[package]
name = "platform-passer-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
platform-passer-core = { path = "../core" }
platform-passer-transport = { path = "../transport" }
platform-passer-input = { path = "../input" }
platform-passer-clipboard = { path = "../clipboard" }
tokio-tungstenite = "0.20"
futures-util = "0.3"
bincode = "1.3"
tracing-subscriber = "0.3.22"
