[package]
name = "platform-passer-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
platform-passer-core = { path = "../../../crates/core" }
platform-passer-transport = { path = "../../../crates/transport" }
platform-passer-input = { path = "../../../crates/input" }
platform-passer-clipboard = { path = "../../../crates/clipboard" }
platform-passer-session = { path = "../../../crates/session" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
ctrlc = "3.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
